PROPER FIX: Restore maven-release-plugin with central-publishing-maven-plugin
- Version back to 0.1.0-SNAPSHOT (maven-release-plugin manages versions)
- Removed distributionManagement (central-publishing-maven-plugin doesn't need it)
- Restored maven-release-plugin configuration
- Workflow uses release:prepare release:perform
- maven-release-plugin will: remove SNAPSHOT, tag, deploy via central-publishing, bump version